--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -44,7 +44,7 @@ TebLocalPlannerROS:
  # Obstacles
 
 #play with this param
- min_obstacle_dist: 0.4
+ min_obstacle_dist: 0.2 #default was 0.4, does not "rech goal"anymore.if set to 0.2
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
@@ -78,7 +78,7 @@ TebLocalPlannerROS:
  enable_homotopy_class_planning: True
 # NOTE: maybe enable multithreading(?) if computations 
 # too slow
- enable_multithreading: False
+ enable_multithreading: True #default is False
  simple_exploration: False
  max_number_classes: 4
  roadmap_graph_no_samples: 15
