edited footprint by setting [0,0] to middle of axis of rotation as mentioned in wiki...seems not improving anything

--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,6 +1,7 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
-footprint: [[0.175, 0.0985], [-0.175, 0.0985], [-0.175, -0.0985], [0.175, -0.0985]]
+footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
+        #[[0.175, 0.0985], [-0.175, 0.0985], [-0.175, -0.0985], [0.175, -0.0985]]from max,replaced from simu
 #robot_radius: ir_of_robot
 inflation_radius: 0.2
 
