--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -7,7 +7,7 @@ TebLocalPlannerROS:
  # Trajectory
   
  teb_autosize: True
- dt_ref: 0.3
+ dt_ref: 0.3 #distance between planned poses? not clear in wiki
  dt_hysteresis: 0.1
  global_plan_overwrite_orientation: True
  max_global_plan_lookahead_dist: 3.0
@@ -25,7 +25,7 @@ TebLocalPlannerROS:
  acc_lim_theta: 0.5
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "polygon"
+   type: "polygon" #polygon,max compexity
    # radius: 0.2 # for type "circular"
    # line_start: [-0.3, 0.0] # for type "line"
    # line_end: [0.3, 0.0] # for type "line"
@@ -33,8 +33,8 @@ TebLocalPlannerROS:
    # front_radius: 0.2 # for type "two_circles"
    # rear_offset: 0.2 # for type "two_circles"
    # rear_radius: 0.2 # for type "two_circles"
-   vertices: [[0.175, 0.0985],[-0.175, 0.0985],[-0.175, -0.0985],[0.175, -0.0985]]
-
+   vertices: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
+   #[[0.175, 0.0985],[-0.175, 0.0985],[-0.175, -0.0985],[0.175, -0.0985]] by max,replaced from simu
  # GoalTolerance
     
  xy_goal_tolerance: 0.2
@@ -58,7 +58,7 @@ TebLocalPlannerROS:
  no_outer_iterations: 4
  optimization_activate: True
  optimization_verbose: False
- penalty_epsilon: 0.1
+ penalty_epsilon: 0.1 #def.: 0.1;wiki:all penalty terms,be careful cause massive influence
  weight_max_vel_x: 2
  weight_max_vel_theta: 1
  weight_acc_lim_x: 1
@@ -67,7 +67,7 @@ TebLocalPlannerROS:
  weight_kinematics_forward_drive: 1
  weight_kinematics_turning_radius: 1
  weight_optimaltime: 1
- weight_obstacle: 50
+ weight_obstacle: 50 #def: 50;wiki:if you choose too high values, it becomes ill-conditioned,poor conv.behavior
  weight_dynamic_obstacle: 10 # not in use yet
  alternative_time_cost: False # not in use yet
 
