--- a/costmap_converter_params.yaml
+++ b/costmap_converter_params.yaml
@@ -2,8 +2,8 @@ TebLocalPlannerROS:
 
   ## Costmap converter plugin   
   #costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
-  #costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
-  costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSMCCH"
+  costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
+  #costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSMCCH"
   #costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSConcaveHull"
   #costmap_converter_plugin: "" # deactivate plugin
   costmap_converter_spin_thread: True
