--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -9,19 +9,19 @@ TebLocalPlannerROS:
  teb_autosize: True
  dt_ref: 0.3 #distance between planned poses? not clear in wiki
  dt_hysteresis: 0.1
- global_plan_overwrite_orientation: True
+ global_plan_overwrite_orientation: False  #nightOWL True
  max_global_plan_lookahead_dist: 4.5
  feasibility_check_no_poses: 8
     
  # Robot
  
 #play with this param        
- max_vel_x: 1.4
+ max_vel_x: 2.0 #nightOWL 1.4
 #play with this param
- max_vel_x_backwards: 1.0
+ max_vel_x_backwards: 2.0 #nightOWL 1.0
 #play with this param
- wheelbase: 0.26
- max_vel_theta: 0.42
+ wheelbase: 0.26 #nightOWL TRY 0.28 LATER
+ max_vel_theta: 0.42 #nightOWL 0.42 
  acc_lim_x: 0.5
  acc_lim_theta: 0.5
  min_turning_radius: 0.61 #def.:0.0 our car has 0.61m
@@ -39,14 +39,14 @@ TebLocalPlannerROS:
    #[[0.175, 0.0985],[-0.175, 0.0985],[-0.175, -0.0985],[0.175, -0.0985]] by max,replaced from simu
  # GoalTolerance
     
- xy_goal_tolerance: 0.3
- yaw_goal_tolerance: 0.5
- # free_goal_vel: False
+ xy_goal_tolerance: 0.3 #nightOWL TRY 0.2 LATER
+ yaw_goal_tolerance: 0.5 #nightOWL TRY 0.4 LATER
+ free_goal_vel: False #nightOWL completely commented
     
  # Obstacles
 
 #play with this param
- min_obstacle_dist: 0.4 #default was 0.4, does not "rech goal"anymore.if set to 0.2
+ min_obstacle_dist: 0.45 #default was 0.4, does not "rech goal"anymore.if set to 0.2 #nightOWL 0.4
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
  obstacle_poses_affected: 30
@@ -66,9 +66,9 @@ TebLocalPlannerROS:
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 1
  weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 1
- weight_kinematics_turning_radius: 1
- weight_optimaltime: 10
+ weight_kinematics_forward_drive: 1000 #nightOWL 1
+ weight_kinematics_turning_radius: 100 #nightOWL 1
+ weight_optimaltime: 1 #nightOWL 10
  weight_obstacle: 50 #def: 50;wiki:if you choose too high values, it becomes ill-conditioned,poor conv.behavior
  #weight_dynamic_obstacle: 10 # not in use yet
  #alternative_time_cost: False # not in use yet
@@ -77,14 +77,14 @@ TebLocalPlannerROS:
 
 # NOTE: according to wiki this prevents robot from getting
 # stuck in local optima
- enable_homotopy_class_planning: false
+ enable_homotopy_class_planning: True #nightOWL false
 # NOTE: maybe enable multithreading(?) if computations 
 # too slow
  enable_multithreading: True #default is False
  simple_exploration: False
-# max_number_classes: 4
-# roadmap_graph_no_samples: 15
-# roadmap_graph_area_width: 5
+ max_number_classes: 4 #nightOWL completely commented
+ roadmap_graph_no_samples: 15 #nightOWL completely commented
+ roadmap_graph_area_width: 5 #nightOWL completely commented
  h_signature_prescaler: 0.5
  h_signature_threshold: 0.1
  obstacle_keypoint_offset: 0.1
