--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,10 +1,10 @@
 local_costmap:
   global_frame: /map
   robot_base_frame: base_footprint
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: true
+  update_frequency: 1.0 #nightOWL 5.0
+  publish_frequency: 5.0 #nightOWL 2.0
+  static_map: false #nightOWL true
   rolling_window: true
-  width: 4.0
-  height: 4.0
+  width: 10.0 #nightOWL 4.0
+  height: 10.0 #nightOWL 4.0
   resolution: 0.05
