--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -10,14 +10,14 @@ TebLocalPlannerROS:
  #dt_ref: 0.3 #distance between planned poses? not clear in wiki
  #dt_hysteresis: 0.1
  global_plan_overwrite_orientation: False  #nightOWL True
- max_global_plan_lookahead_dist: 3.0
+ max_global_plan_lookahead_dist: 4.5
  #doubled this from 8 -> 16
- feasibility_check_no_poses: 10
+ feasibility_check_no_poses: 8
     
  # Robot
  
  #changed from 1.6->1.4        
- max_vel_x: 1.4 
+ max_vel_x: 1.0
  #not changed
  max_vel_x_backwards: 2.0
  #wheelbase should be fix
@@ -32,7 +32,7 @@ TebLocalPlannerROS:
  cmd_angle_instead_rotvel: True
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
    type: "polygon" #polygon,max compexity
-   # radius: 0.2 # for type "circular"
+   #radius: 0.2 # for type "circular"
    # line_start: [-0.3, 0.0] # for type "line"
    # line_end: [0.3, 0.0] # for type "line"
    # front_offset: 0.2 # for type "two_circles"
@@ -52,30 +52,34 @@ TebLocalPlannerROS:
  # Obstacles
 
 #play with this param
- min_obstacle_dist: 0.45 #default was 0.4, does not "rech goal"anymore.if set to 0.2 #nightOWL 0.4
+#default was 0.4, does not "rech goal"anymore.if set to 0.2 #nightOWL 0.4
+ min_obstacle_dist: 0.2 
+ #inflation dist needs to be greater than min_obstacle_dist to take effect
+ inflation_dist: 0.3
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
- obstacle_poses_affected: 30
+ obstacle_poses_affected: 20
  costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
 
  # Optimization
     
-# no_inner_iterations: 5
+ #no_inner_iterations: 5
  #no_outer_iterations: 4
  #optimization_activate: True
  #optimization_verbose: False
- penalty_epsilon: 0.1 #def.: 0.1;wiki:all penalty terms,be careful cause massive influence
- weight_max_vel_x: 2
- weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
- weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 1000 #nightOWL 1
- weight_kinematics_turning_radius: 100 #nightOWL 1
- weight_optimaltime: 1 #nightOWL 10
- weight_obstacle: 50 #def: 50;wiki:if you choose too high values, it becomes ill-conditioned,poor conv.behavior
+ #penalty_epsilon: 0.1 #def.: 0.1;wiki:all penalty terms,be careful cause massive influence
+ #weight_max_vel_x: 2
+ #weight_max_vel_theta: 1
+ #weight_acc_lim_x: 1
+ #weight_acc_lim_theta: 1
+ #weight_kinematics_nh: 1000
+ #nightOWL 1000
+ #weight_kinematics_forward_drive: 50
+ #weight_kinematics_turning_radius: 100 #nightOWL 1
+ #weight_optimaltime: 1 #nightOWL 10
+ #weight_obstacle: 50 #def: 50;wiki:if you choose too high values, it becomes ill-conditioned,poor conv.behavior
  #weight_dynamic_obstacle: 10 # not in use yet
  #alternative_time_cost: False # not in use yet
 
