--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,9 +1,9 @@
-obstacle_range: 3.0 #2.0 nightOWL 3.5
-raytrace_range: 3.0
+obstacle_range: 3 #4
+raytrace_range: 3.5 #3
 footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
         #[[0.175, 0.0985], [-0.175, 0.0985], [-0.175, -0.0985], [0.175, -0.0985]]from max,replaced from simu
 #robot_radius: ir_of_robot
-inflation_radius: 0.5 #nightOWL 0.7
+inflation_radius: 0.7 #nightOWL 0.7
 
 #omitted point_cloud_sensor
 observation_sources: laser_scan_sensor
@@ -11,3 +11,36 @@ observation_sources: laser_scan_sensor
 laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: laserscan, marking: true, clearing: true}
 
 #point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
+
+map_type: voxel
+
+obstacle_layer:
+  enabled: true
+  max_obstacle_height: 0.40
+  origin_z: 0.0
+  z_resolution: 0.2
+  z_voxels: 2
+  unknown_threshold: 15
+  mark_threshold: 0
+  combination_method: 1
+  track_unknown_space: true    #true needed for disabling global path planning through unknown space
+  obstacle_range: 2.5
+  raytrace_range: 3.0
+  publish_voxel_map: false
+  observation_sources: scan
+  scan:
+    data_type: LaserScan
+    topic: scan
+    marking: true
+    clearing: true
+    min_obstacle_height: 0.0
+    max_obstacle_height: 0.40
+
+#cost_scaling_factor and inflation_radius were now moved to the inflation_layer ns
+inflation_layer:
+  enabled: true
+  inflation_radius: 0.1  # max. distance from an obstacle at which costs are incurred for planning paths.
+  cost_scaling_factor: 25.0 #19
+
+static_layer:
+  enabled: true
