--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -1,92 +1,22 @@
 TebLocalPlannerROS:
 
  odom_topic: odom
-# Changed this 
+# Changed this
  map_frame: /map
-    
- # Trajectory
-  
- teb_autosize: True
- dt_ref: 0.3 #distance between planned poses? not clear in wiki
- dt_hysteresis: 0.1
- global_plan_overwrite_orientation: True
- max_global_plan_lookahead_dist: 4.5
- feasibility_check_no_poses: 8
-    
- # Robot
- 
-#play with this param        
- max_vel_x: 1.4
-#play with this param
- max_vel_x_backwards: 1.0
-#play with this param
  wheelbase: 0.26
- max_vel_theta: 0.42
- acc_lim_x: 0.5
- acc_lim_theta: 0.5
- min_turning_radius: 0.61 #def.:0.0 our car has 0.61m
- cmd_angle_instead_rotvel: True #stage simulator takes the angle instead of the rotvel as input (twist message)
- footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "polygon" #polygon,max compexity
-   # radius: 0.2 # for type "circular"
-   # line_start: [-0.3, 0.0] # for type "line"
-   # line_end: [0.3, 0.0] # for type "line"
-   # front_offset: 0.2 # for type "two_circles"
-   # front_radius: 0.2 # for type "two_circles"
-   # rear_offset: 0.2 # for type "two_circles"
-   # rear_radius: 0.2 # for type "two_circles"
-   vertices: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
-   #[[0.175, 0.0985],[-0.175, 0.0985],[-0.175, -0.0985],[0.175, -0.0985]] by max,replaced from simu
- # GoalTolerance
-    
- xy_goal_tolerance: 0.3
- yaw_goal_tolerance: 0.5
- # free_goal_vel: False
-    
- # Obstacles
-
-#play with this param
- min_obstacle_dist: 0.4 #default was 0.4, does not "rech goal"anymore.if set to 0.2
- include_costmap_obstacles: True
- costmap_obstacles_behind_robot_dist: 1.0
- obstacle_poses_affected: 30
- costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSRANSAC"
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
-
- # Optimization
-    
- no_inner_iterations: 5
- no_outer_iterations: 4
- optimization_activate: True
- optimization_verbose: False
- penalty_epsilon: 0.1 #def.: 0.1;wiki:all penalty terms,be careful cause massive influence
- weight_max_vel_x: 2
- weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
- weight_kinematics_nh: 1000
- weight_kinematics_forward_drive: 1
- weight_kinematics_turning_radius: 1
- weight_optimaltime: 10
- weight_obstacle: 50 #def: 50;wiki:if you choose too high values, it becomes ill-conditioned,poor conv.behavior
- #weight_dynamic_obstacle: 10 # not in use yet
- #alternative_time_cost: False # not in use yet
-
- # Homotopy Class Planner
-
-# NOTE: according to wiki this prevents robot from getting
-# stuck in local optima
- enable_homotopy_class_planning: false
-# NOTE: maybe enable multithreading(?) if computations 
-# too slow
- enable_multithreading: True #default is False
- simple_exploration: False
-# max_number_classes: 4
-# roadmap_graph_no_samples: 15
-# roadmap_graph_area_width: 5
- h_signature_prescaler: 0.5
- h_signature_threshold: 0.1
- obstacle_keypoint_offset: 0.1
- obstacle_heading_threshold: 0.45
- visualize_hc_graph: False
+ cmd_angle_instead_rotvel: true
+ footprint_model/type: polygon
+ footprint_model/vertices: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
+ min_turning_radius: 0.61
+ max_vel_x: 1.4
+ max_vel_x_backwards: 2.0
+ max_vel_y: 2.0
+ max_vel_theta: 2.0
+ acc_lim_x: 2.0
+ acc_lim_y: 2.0
+ acc_lim_theta: 2.0
+ xy_goal_tolerance: 0.5
+ yaw_goal_tolerance: 1.2
+ max_global_plan_lookahead_dist: 8.0
+ min_obstacle_dist: 0.3
+ inflation_dist: 0.45
