--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -5,9 +5,25 @@ footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.3
 
-#omitted point_cloud_sensor
-observation_sources: laser_scan_sensor
+map_type: costmap
 
-laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: laserscan, marking: true, clearing: true}
+obstacle_layer:
+ enabled: true
+ obstacle_range: 3.0
+ raytrace_range: 3.5
+ inflation_radius: 0.2
+ track_unknown_space: false
+ combination_method: 1
+ observation_sources: laser_scan_sensor
+ laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+inflation_layer:
+  enabled:              true
+  cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
+  inflation_radius:     0.5  # max. distance from an obstacle at which costs are incurred for planning paths.
+
+static_layer:
+  enabled:              true
+  map_topic:            "/map"
 
 #point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
