--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,10 +1,15 @@
 local_costmap:
   global_frame: /map
   robot_base_frame: base_footprint
-  update_frequency: 8.0
-  publish_frequency: 4.0
-  static_map: true
+  update_frequency: 10.0
+  publish_frequency: 5.0
+  static_map: false
   rolling_window: true
   width: 2.3
   height: 5.0
   resolution: 0.25
+
+  plugins:
+   - {name: static_layer,        type: "costmap_2d::StaticLayer"}
+   - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
+   - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
