--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,9 +1,9 @@
-obstacle_range: 5.0 #2.0
-raytrace_range: 5.0
+obstacle_range: 3.0 #2.0
+raytrace_range: 3.5
 footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
         #[[0.175, 0.0985], [-0.175, 0.0985], [-0.175, -0.0985], [0.175, -0.0985]]from max,replaced from simu
 #robot_radius: ir_of_robot
-inflation_radius: 0.3
+inflation_radius: 0.2
 
 map_type: costmap
 
@@ -12,10 +12,11 @@ obstacle_layer:
  obstacle_range: 3.0
  raytrace_range: 3.5
  inflation_radius: 0.2
+ cost_scaling_factor: 10
  track_unknown_space: false
  combination_method: 1
  observation_sources: laser_scan_sensor
- laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+ laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan_filtered, marking: true, clearing: true}
 
 inflation_layer:
   enabled:              true
