--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,12 +1,12 @@
 local_costmap:
   global_frame: /map
   robot_base_frame: base_footprint
-  update_frequency: 10.0
-  publish_frequency: 5.0
-  static_map: false
+  update_frequency: 5.0
+  publish_frequency: 10.0
+  static_map: true
   rolling_window: true
-  width: 2.3
-  height: 5.0
+  width: 6
+  height: 6
   resolution: 0.25
 
   plugins:
