Semi-Working stuff

--- a/laser_filter.yaml
+++ b/laser_filter.yaml
@@ -6,11 +6,18 @@ scan_filter_chain:
       - name: median_5
         type: MultiChannelMedianFilterFloat 
         params:
-          number_of_observations: 5
-          unused: 10
+          number_of_observations: 39
+          #unused: 10
     intensity_filter_chain:
       - name: median_5
         type: MultiChannelMedianFilterFloat 
         params:
-          number_of_observations: 5
-          unused: 10
+          number_of_observations: 39
+          #unused: 10
+- name: shadows
+  type: ScanShadowsFilter
+  params:
+    min_angle: 10
+    max_angle: 70
+    neighbors: 20
+    window: 0
