--- a/base_local_planner_params.yaml
+++ b/base_local_planner_params.yaml
@@ -7,16 +7,16 @@ TebLocalPlannerROS:
  cmd_angle_instead_rotvel: true
  footprint_model/type: polygon
  footprint_model/vertices: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
- min_turning_radius: 0.61
+ min_turning_radius: 0.81
  max_vel_x: 0.8
- max_vel_x_backwards: 2.0
+ max_vel_x_backwards: 1.5
  max_vel_y: 0.6
- max_vel_theta: 2.0
- acc_lim_x: 1.0
- acc_lim_y: 1.0
- acc_lim_theta: 1.0
+ max_vel_theta: 0.6
+ #acc_lim_x: 1.0
+ #acc_lim_y: 1.0
+ #acc_lim_theta: 0.3
  xy_goal_tolerance: 0.5
- yaw_goal_tolerance: 0.8
- max_global_plan_lookahead_dist: 8.0
+ yaw_goal_tolerance: 1.2
+ #max_global_plan_lookahead_dist: 4
  min_obstacle_dist: 0.3
  inflation_dist: 0.45
