--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -3,15 +3,14 @@ raytrace_range: 3.5
 footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
         #[[0.175, 0.0985], [-0.175, 0.0985], [-0.175, -0.0985], [0.175, -0.0985]]from max,replaced from simu
 #robot_radius: ir_of_robot
-inflation_radius: 0.2
 
+max_obstacle_height: 0.4
 map_type: costmap
 
 obstacle_layer:
  enabled: true
  obstacle_range: 3.0
  raytrace_range: 3.5
- inflation_radius: 0.2
  cost_scaling_factor: 10
  track_unknown_space: false
  combination_method: 1
@@ -21,7 +20,7 @@ obstacle_layer:
 inflation_layer:
   enabled:              true
   cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
-  inflation_radius:     0.5  # max. distance from an obstacle at which costs are incurred for planning paths.
+  inflation_radius:     0.2  # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
   enabled:              true
