--- a/global_costmap_params.yaml
+++ b/global_costmap_params.yaml
@@ -1,11 +1,15 @@
 global_costmap:
   global_frame: /map
   robot_base_frame: base_footprint
-  update_frequency: 2.0
+  update_frequency: 1.0
   publish_frequency: 0.5
   static_map: true
+  lethal_cost: 130
+  inflation_radius: 0.1
+  neutral_cost: 25
+  inflation_radius: 4.0
+  cost_scaling_factor: 8.0
 
   plugins:
     - {name: static_layer,            type: "costmap_2d::StaticLayer"}
-    - {name: obstacle_layer,          type: "costmap_2d::VoxelLayer"}
     - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
