--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,13 +1,15 @@
 local_costmap:
   global_frame: /map
   robot_base_frame: base_footprint
-  update_frequency: 10.0
-  publish_frequency: 10.0
-  static_map: false
+  update_frequency: 5.0
+  publish_frequency: 5.0
+  static_map: true
   rolling_window: true
-  width: 6
-  height: 6
-  resolution: 0.25
+  inflation_radius: 1.0
+  cost_scaling_factor: 49
+  width: 4
+  height: 4
+  resolution: 0.15
 
   plugins:
    - {name: static_layer,        type: "costmap_2d::StaticLayer"}
