--- a/package.xml
+++ b/package.xml
@@ -41,10 +41,12 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>depthimage_to_laserscan</build_depend>
+  <build_depend>laser_filters</build_depend>
   <build_depend>move_base</build_depend>
   <build_depend>pses_basis</build_depend>
   <build_depend>robot_setup_tf</build_depend>
   <run_depend>depthimgage_to_laserscan</run_depend>
+  <run_depend>laser_filters</run_depend>
   <run_depend>move_base</run_depend>
   <run_depend>pses_basis</run_depend>
   <run_depend>robot_setup_tf</run_depend>
