--- a/costmap_common_params.yaml
+++ b/costmap_common_params.yaml
@@ -1,3 +1,4 @@
+transform_tolerance: 0.3
 obstacle_range: 3.0 #2.0
 raytrace_range: 3.5
 footprint: [[-0.325,-0.10], [0.075, -0.10], [0.075, 0.10], [-0.325, 0.10]]
@@ -12,7 +13,7 @@ obstacle_layer:
  obstacle_range: 3.0
  raytrace_range: 3.5
  cost_scaling_factor: 10
- track_unknown_space: false
+ track_unknown_space: true
  combination_method: 1
  observation_sources: laser_scan_sensor
  laser_scan_sensor: {sensor_frame: base_laser, data_type: LaserScan, topic: scan_filtered, marking: true, clearing: true}
