--- a/local_costmap_params.yaml
+++ b/local_costmap_params.yaml
@@ -1,17 +1,16 @@
 local_costmap:
-  global_frame: /map
+  global_frame: /odom
   robot_base_frame: base_footprint
   update_frequency: 5.0
   publish_frequency: 5.0
-  static_map: true
+  static_map: false
   rolling_window: true
-  inflation_radius: 1.0
-  cost_scaling_factor: 49
   width: 4
   height: 4
-  resolution: 0.15
+  resolution: 0.3
+  origin_x: 0.0
+  origin_y: 0.0
 
   plugins:
-   - {name: static_layer,        type: "costmap_2d::StaticLayer"}
    - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
    - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
